[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["chun1 <arthur@chunai.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aqt = { extras = ["at6"], version = "^2.1.65" }
mypy = "^1.3.0"
anki = "^2.1.65"


[tool.pdm.build]
includes = []
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [{ name = "chun1", email = "arthur@chunai.dev" }]
requires-python = "<4.0,>=3.10"
dependencies = [
    "aqt[at6]<3.0.0,>=2.1.65",
    "mypy<2.0.0,>=1.3.0",
    "anki<3.0.0,>=2.1.65",
    "uvicorn>=0.29.0",
    "litestar[standard]>=2.7.1",
    "pydantic-settings>=2.2.1",
    "fastapi>=0.110.1",
]
name = "vanki"
version = "0.1.0"
description = ""
readme = "README.md"
